--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>HTML PRANK: REPAIR RECEIPT</title>
+  <title>HACK PHONE PRANK</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
     body {
@@ -104,11 +104,11 @@
 <body>
   <div class="container">
     <h1 class="glitch" data-text="HTML PRANK">HTML PRANK</h1>
-    <p class="subtitle">Buat kawan kau panik dengan resit palsu - tapi nampak real!</p>
+    <p class="subtitle">Buat kawan panik dengan prank HACK phone dia - tapi nampak real!</p>
 
     <div class="preview-box">
-      <h2>PRANK: Fake Repair Receipt</h2>
-      <p>Fail ini akan tunjukkan satu resit servis peranti dengan jumlah ratusan ringgit. Sesuai untuk prank kekasih, bos, atau kawan.</p>
+      <h2>PRANK: HACK phone kawan</h2>
+      <p>Fail ini akan tunjukkan terminal demo breaching ala-ala matrix. Sesuai untuk kawan-kawan.</p>
       <img src="preview.png" alt="preview prank" class="preview-img"/>
       <p class="price">Harga: <strong>RM3.00 sahaja</strong></p>
       <a href="https://toyyibpay.com/your-prank-bill" class="buy-button">Beli Sekarang</a>
