--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="preview-box">
       <h2>PRANK: HACK phone kawan</h2>
       <p>Fail ini akan tunjukkan terminal demo breaching ala-ala matrix. Sesuai untuk kawan-kawan.</p>
-      <img src="preview.png" alt="preview prank" class="preview-img"/>
+      <img src="prank.gif" alt="preview prank" class="preview-img">
       <p class="price">Harga: <strong>RM3.00 sahaja</strong></p>
       <a href="https://toyyibpay.com/your-prank-bill" class="buy-button">Beli Sekarang</a>
     </div>
