--- a/prankdownload.html
+++ b/prankdownload.html
@@ -64,7 +64,7 @@
 <body>
   <h1>Muat Turun Berjaya!</h1>
   <p>Terima kasih kerana membuat pembelian. Klik butang di bawah untuk memuat turun fail HTML prank anda:</p>
-  <a href="mybnk.html" download class="download-button">Muat Turun Fail PRANK</a>
+  <a href="receipt.html" download class="download-button">Muat Turun Fail PRANK</a>
 
   <footer>
     &copy; 2025 Amanz Prank Studio
