--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <p>Fail ini akan tunjukkan terminal demo breaching ala-ala matrix. Sesuai untuk kawan-kawan.</p>
       <img src="prank.gif" alt="preview prank" class="preview-img">
       <p class="price">Harga: <strong>RM3.00 sahaja</strong></p>
-      <a href="https://toyyibpay.com/your-prank-bill" class="buy-button">Beli Sekarang</a>
+      <a href="https://prank.realbeautyarby.com.my/create_bill.php" class="buy-button">Beli Sekarang</a>
     </div>
 
     <footer>
